new design for navbar

--- a/app/assets/stylesheets/config/_variables.scss
+++ b/app/assets/stylesheets/config/_variables.scss
@@ -24,11 +24,15 @@ $base-height: 1.4;
  * Colors
  * ------------------------------------- */
 // Scheme
-$brand-color: #D23333;
+
+
+  // Seedr colors
+$brand-color: #F7C843;
+$yellow: #EAB027;
+$gray: #050505;
+$grey: #F5F5F5;
 
 $red: #EE5F5B;
 $blue: #469AE0;
-$yellow: #FDB631;
 $orange: #E67E22;
 $green: #32B796;
-$gray: #000000;
