--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,16 +1,30 @@
-<h2>Resend confirmation instructions</h2>
+<div class="container">
+  <div class="row padded">
+    <div class="col-xs-6 col-xs-offset-3">
 
-<%= simple_form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
-  <%= f.error_notification %>
-  <%= f.full_error :confirmation_token %>
+      <%= simple_form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
+        <%= f.error_notification %>
+        <%= f.full_error :confirmation_token %>
 
-  <div class="form-inputs">
-    <%= f.input :email, required: true, autofocus: true %>
+        <div class="form-inputs">
+          <%= f.input :email, required: true, autofocus: true %>
+        </div>
+
+          <div class="row text-center">
+            <div class="col-xs-12">
+              <div class="form-actions">
+                <%= f.button :submit, "Resend confirmation instructions" %>
+              </div>
+            </div>
+          </div>
+      <% end %>
+      <hr>
+      <br>
+      <div class="row login">
+        <div class="col-xs-6">
+          <%= render "devise/shared/links" %>
+        </div>
+      </div>
+    </div>
   </div>
-
-  <div class="form-actions">
-    <%= f.button :submit, "Resend confirmation instructions" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
