--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,17 +1,38 @@
-<h2>Sign up</h2>
+<div class="container">
+  <div class="row padded">
+    <div class="col-xs-6 col-xs-offset-3">
 
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= f.error_notification %>
+      <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+        <%= f.error_notification %>
 
-  <div class="form-inputs">
-    <%= f.input :email, required: true, autofocus: true %>
-    <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length) %>
-    <%= f.input :password_confirmation, required: true %>
+        <div class="form-inputs">
+          <%= f.input :first_name %>
+          <%= f.input :last_name %>
+          <%= f.input :email, required: true, autofocus: true %>
+          <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length) %>
+          <%= f.input :password_confirmation, required: true %>
+        </div>
+
+          <div class="row text-center">
+            <div class="col-xs-12">
+              <div class="form-actions">
+                <%= f.button :submit, "Sign up", class: 'btn btn-block btn-danger'  %>
+              </div>
+            </div>
+          </div>
+      <% end %>
+      <hr>
+      <br>
+      <div class="row login">
+        <div class="col-xs-6">
+          <p>Already have an account ?</p>
+        </div>
+        <div class="col-xs-6">
+          <%= render "devise/shared/links" %>
+
+        </div>
+      </div>
+    </div>
   </div>
+</div>
 
-  <div class="form-actions">
-    <%= f.button :submit, "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
