--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,117 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+---
+title: Le Wagon UI components
+---
+
+<h1 class="text-center" style="font-size: 30px;margin-top: 40px;margin-bottom: 30px;">Le Wagon UI components</h2>
+
+
+<div class="container-fluid readme">
+  <div class="row">
+    <div class="col-xs-12 col-sm-10 col-sm-offset-1">
+
+      <section class="readme-section">
+
+        <h2 class="readme-header">Getting started</h2>
+        <br>
+        <p>Before you use one of our components:</p>
+        <ul>
+          <li style="margin-bottom: 10px">Make sure you <strong>understand the HTML structure</strong> of this component.</li>
+          <li style="margin-bottom: 10px">Click on the "View CSS code" button and make sure you <strong>understand the associated CSS code and its "graphical logic"</strong>.</li>
+          <li style="margin-bottom: 10px">Add a new .SCSS partial file (e.g. <code>_avatar.scss</code>) in your stylesheets <code>components</code> folder, copy/paste our CSS code inside, and then use the HTML code wherever you want.</li>
+        </ul>
+      </section>
+
+      <section class="readme-section" id="avatar">
+        <h2 class="readme-header">Avatar</h2>
+        <%= render "shared/avatar" %>
+
+        <div class="download">
+          <%#= link_to "View CSS code", github_sass_url("avatar"), class: "btn btn-primary"%>
+        </div>
+      </section>
+
+      <section class="readme-section" id="button">
+        <h2 class="readme-header">Button</h2>
+        <%#= partial "components/button" %>
+
+        <div class="download">
+          <%#= link_to "View CSS code", github_sass_url("button"), class: "btn btn-primary"%>
+        </div>
+      </section>
+
+      <section class="readme-section" id="badge">
+        <h2 class="readme-header">Badge</h2>
+        <%#= partial "components/user_badge" %>
+        <%#= partial "components/icon_badge" %>
+
+        <div class="download">
+          <%#= link_to "View CSS code", github_sass_url("badge"), class: "btn btn-primary"%>
+        </div>
+      </section>
+
+      <section class="readme-section" id="banner">
+        <h2 class="readme-header">Banner</h2>
+        <%#= partial "components/banner" %>
+
+        <div class="download">
+          <%#= link_to "View CSS code", github_sass_url("banner"), class: "btn btn-primary"%>
+        </div>
+      </section>
+
+      <section class="readme-section" id="card">
+        <h2 class="readme-header">card</h2>
+        <%#= partial "components/card" %>
+
+        <div class="download">
+          <%#= link_to "View CSS code", github_sass_url("card"), class: "btn btn-primary"%>
+        </div>
+      </section>
+
+      <section class="readme-section" id="list">
+        <h2 class="readme-header">List item</h2>
+        <%#= partial "components/product_item" %>
+
+        <div class="download">
+          <%#= link_to "View CSS code", github_sass_url("product_item"), class: "btn btn-primary"%>
+        </div>
+      </section>
+
+      <section class="readme-section" id="tabs">
+        <h2 class="readme-header">tabs</h2>
+        <%#= partial "components/tabs" %>
+
+        <div class="download">
+          <%#= link_to "View CSS code", github_sass_url("tabs"), class: "btn btn-primary"%>
+        </div>
+      </section>
+
+      <section class="readme-section" id="navbar">
+        <h2 class="readme-header">Navbar</h2>
+        <%= render "shared/navbar" %>
+
+        <div class="download">
+          <%#= link_to "View CSS code", github_sass_url("navbar"), class: "btn btn-primary"%>
+        </div>
+      </section>
+
+      <section class="readme-section" id="shared">
+        <h2 class="readme-header">Share Links</h2>
+        <%#= partial "components/share_links" %>
+
+        <div class="download">
+          <%#= link_to "View CSS code", github_sass_url("share_links"), class: "btn btn-primary"%>
+        </div>
+      </section>
+
+      <section class="readme-section" id="media">
+        <h2 class="readme-header">Media Layout</h2>
+        <%#= partial "components/media_layout" %>
+
+        <div class="download">
+          <%#= link_to "View CSS code", github_sass_url("media_layout"), class: "btn btn-primary"%>
+        </div>
+      </section>
+
+    </div>
+  </div>
+</div>
