--- a/app/assets/stylesheets/components/_avatars.scss
+++ b/app/assets/stylesheets/components/_avatars.scss
@@ -2,8 +2,12 @@
   width: 30px;
   border-radius: 50%;
 }
+.avatar-medium {
+  width: 100px;
+  border-radius: 50%;
+}
 .avatar-large {
-  width: 50px;
+  width: 150px;
   border-radius: 50%;
 }
 .avatar-bordered {
