--- a/app/assets/stylesheets/config/_variables.scss
+++ b/app/assets/stylesheets/config/_variables.scss
@@ -26,7 +26,7 @@ $base-height: 1.4;
 // Scheme
 
 
-  // Seedr colors
+  // Seeedr colors
 $brand-color: #F7C843;
 $yellow: #EAB027;
 $gray: #050505;
