--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -2,3 +2,27 @@
  * CSS code specific to home page
  * (margin/padding adjustments)
  * ------------------------------------- */
+
+.testimonial-content img {
+  float: left;
+  margin: 0 30px 20px 0;
+}
+
+.testimonial-content p {
+  text-align: justify;
+  line-height: 1.5;
+}
+
+.testimonial-content p.status {
+  font-weight: 100;
+  font-style: italic;
+  opacity: 0.8;
+}
+
+.testimonial-content h3 {
+  margin-bottom: 0;
+}
+
+.testimonial-content iframe {
+  margin: 30px 0;
+}
