--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,147 @@
-<h1>Pages#home</h1>
-<p>Coucou les copains !! -  in app/views/pages/home.html.erb</p>
+<!-- banner -->
+
+<div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('background.jpg');">
+  <div class="banner-content">
+    <h1>Change Your Workspace</h1>
+    <p> Exhibit artists of tomorrow in your office</p>
+    <a class="btn btn-primary btn-lg">Book an Artist</a>
+  </div>
+</div>
+
+<!-- key step-->
+
+<div class="wrapper padded">
+  <div class="container">
+    <div class="row">
+      <h2 class="padded-mini underline">An easy process</h2>
+      <div class="col-xs-12 col-sm-6 col-md-3 text-center">
+        <div class="key-step">
+          <img src="http://placehold.it/150x150" alt="">
+          <p> Create an Exhbition</p>
+        </div>
+      </div>
+      <div class="col-xs-12 col-sm-6 col-md-3 text-center">
+        <div class="key-step">
+          <img src="http://placehold.it/150x150" alt="">
+          <p> Create an Exhbition</p>
+        </div>
+      </div>
+      <div class="col-xs-12 col-sm-6 col-md-3 text-center">
+        <div class="key-step">
+          <img src="http://placehold.it/150x150" alt="">
+          <p> Create an Exhbition</p>
+        </div>
+      </div>
+      <div class="col-xs-12 col-sm-6 col-md-3 text-center">
+        <div class="key-step">
+          <img src="http://placehold.it/150x150" alt="">
+          <p> Create an Exhbition</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- testimonial homepage -->
+
+<div class="wrapper padded bg-grey">
+  <div class="container">
+    <div class="row">
+      <h2 class="padded-mini underline">Discover how le Wagon improve his workplace with us</h2>
+      <div class="testimonial">
+        <div class="col-sm-12 col-md-6">
+          <div class="testimonial-content">
+            <img src="http://placehold.it/150x150" alt="" class="avatar-large">
+            <h3>Boris Paillard</h3>
+            <p class="status"> CEO of LeWagon</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius sapiente aspernatur provident quos ducimus magnam asperiores velit tempora cum eaque, repudiandae facilis non doloremque reiciendis tenetur odio veritatis? Nostrum, veniam. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi repellat, deleniti totam aliquid non amet molestias officia ad asperiores, cum iusto animi ut. Dolores odit qui labore tempora, consequatur nisi.</p>
+          </div>
+        </div>
+        <div class="col-sm-12 col-md-6">
+          <div class="testimonial-content text-center">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/tf_oIjOxS2I?ecver=1" frameborder="0" allowfullscreen></iframe>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- artist's card-->
+
+<div class="wrapper padded">
+  <div class="container">
+    <div class="row">
+      <h2 class="padded-mini underline">Last registered artists</h2>
+      <% 4.times do %>
+        <div class="col-xs-12 col-sm-6 col-md-3">
+          <div class="card text-center">
+            <p class="category"><i class="fa fa-camera" aria-hidden="true"></i></p>
+            <img src="http://placehold.it/150x150" alt="" class="avatar-medium">
+            <p class="name">John Doe</p>
+            <p class="speciality">Photographer</p>
+            <hr>
+            <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit, quod deserunt numquam fugiat. Blanditiis, modi, error. Quod vero officiis explicabo reiciendis delectus placeat vitae ea hic, a eligendi incidunt expedita.</p>
+            <a href="" class="btn btn-primary">View profile</a>
+          </div>
+        </div>
+      <% end %>
+    </div>
+  </div>
+</div>
+
+<!-- reassurance -->
+
+<div class="wrapper padded bg-grey">
+  <div class="container">
+    <div class="row">
+      <h2 class="padded-mini underline">Four reasons to work with us</h2>
+      <div class="col-xs-12 col-sm-6 col-md-3 text-center">
+        <div class="key-step">
+          <img src="http://placehold.it/150x150" alt="">
+          <p>Improve your workplace</p>
+        </div>
+      </div>
+      <div class="col-xs-12 col-sm-6 col-md-3 text-center">
+        <div class="key-step">
+          <img src="http://placehold.it/150x150" alt="">
+          <p>Inspire your employees</p>
+        </div>
+      </div>
+      <div class="col-xs-12 col-sm-6 col-md-3 text-center">
+        <div class="key-step">
+          <img src="http://placehold.it/150x150" alt="">
+          <p>Défiscalisez</p>
+        </div>
+      </div>
+      <div class="col-xs-12 col-sm-6 col-md-3 text-center">
+        <div class="key-step">
+          <img src="http://placehold.it/150x150" alt="">
+          <p>Improve your company's image</p>
+        </div>
+      </div>
+    </div>
+    <div class="row padded-mini">
+      <hr class="separator">
+      <h3 class="text-center padded-mini">They trust us</h3>
+      <ul class="list-inline text-center">
+        <li><img src="http://placehold.it/150x50" alt=""></li>
+        <li><img src="http://placehold.it/150x50" alt=""></li>
+        <li><img src="http://placehold.it/150x50" alt=""></li>
+        <li><img src="http://placehold.it/150x50" alt=""></li>
+        <li><img src="http://placehold.it/150x50" alt=""></li>
+      </ul>
+    </div>
+  </div>
+</div>
+
+
+<!-- Artist engagement -->
+
+<div class="banner banner-small" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('background.jpg');">
+  <div class="banner-content">
+    <h1>Your an Artist ?</h1>
+    <p> Join our community and exhibit your creations in the best offices</p>
+    <a class="btn btn-primary btn-lg">Create my book</a>
+  </div>
+</div>
