--- a/app/assets/stylesheets/layout/_footer.scss
+++ b/app/assets/stylesheets/layout/_footer.scss
@@ -1,1 +1,32 @@
 // Your footer style
+#footer {
+  background: #1d1d1d;
+  color: rgba(255, 255, 255, 0.8);
+  padding-bottom: 0;
+  box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.5);
+  font-weight: 100;
+  line-height: 1.7em;
+}
+
+#footer a {
+  color: rgba(255, 255, 255, 0.8);
+  text-decoration: none;
+}
+
+#footer a:hover {
+  color: white;
+  cursor: pointer;
+}
+
+#footer .section {
+  border-bottom: 3px solid $yellow;
+  display: table;
+}
+
+#footer address .fa {
+  margin-right: 10px;
+}
+
+#footer p.copyright {
+  font-size: 0.7em;
+}
