--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -82,7 +82,7 @@
         <div class="col-xs-12 col-sm-6 col-md-3">
           <div class="card text-center">
             <p class="category"><i class="fa fa-camera" aria-hidden="true"></i></p>
-            <img src="http://placehold.it/150x150" alt="" class="avatar-medium">
+            <img src='<%= image_path "artist2.jpeg" %>'  alt="" class="avatar-medium">
             <p class="name">John Doe</p>
             <p class="speciality">Photographer</p>
             <hr>
