--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -6,8 +6,8 @@
         <%= f.error_notification %>
 
         <div class="form-inputs">
-          <%= f.input :first_name %>
-          <%= f.input :last_name %>
+          <%#= f.input :is_company, collection: ["Company", "Artist"], as: :radio_buttons, label: "Role" %>
+          <%= f.collection_radio_buttons :is_company, [[true, 'Company'] ,[false, 'Artist']], :first, :last %>
           <%= f.input :email, required: true, autofocus: true %>
           <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length) %>
           <%= f.input :password_confirmation, required: true %>
