premiers links boutons

--- a/app/views/bids/new.html.erb
+++ b/app/views/bids/new.html.erb
@@ -1,7 +1,7 @@
 <div class="container padded">
   <div class="row">
     <div class="col-xs-10 col-xs-offset-1">
-      <h1>You are about to create a bid</h1>
+      <h1>Select in which gallery you want to exhibit</h1>
       <%= render "form" %>
     </div>
   </div>
