--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row padded">
     <div class="col-xs-10 col-xs-offset-1">
-      <h1>Profile show page</h1>
+      <h1>Profile show dribbble page</h1>
       <hr>
       <br>
       <h2>Hi <%= @user.first_name %> <%= @user.last_name %></h2>
@@ -12,6 +12,7 @@
             method: :delete,
             data: { confirm: "Are you sure?" }  %>
       <% end %>
+      <%= link_to "Add my last art creation", new_artwork_path, class: "btn btn-primary btn-lg" %>
     </div>
   </div>
 </div>
