--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,9 +1,12 @@
 <div class="container">
   <div class="row padded">
     <div class="col-xs-6 col-xs-offset-3">
+      <h1 id="login-title" class="text-center">Who are you ?</h1>
       <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
         <%= f.error_notification %>
+        <div id="account-selector">
         <%= f.collection_radio_buttons :is_company, [[true, 'Company'] ,[false, 'Artist']], :first, :last %>
+        </div>
         <div id="registration-form">
           <%= f.input :first_name %>
           <%= f.input :last_name %>
@@ -11,7 +14,7 @@
           <%= f.input :email, required: true, autofocus: true %>
           <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length) %>
           <%= f.input :password_confirmation, required: true %>
-          <%= f.button :submit, "Sign up", class: 'btn btn-block btn-danger'  %>
+          <%= f.button :submit, "Sign up", class: 'btn btn-block btn-primary'  %>
       <% end %>
           <hr>
           <p>Already have an account ?</p>
