improve form design

--- a/app/assets/stylesheets/config/_variables.scss
+++ b/app/assets/stylesheets/config/_variables.scss
@@ -31,8 +31,8 @@ $brand-color: #F7C843;
 $yellow: #EAB027;
 $gray: #050505;
 $grey: #F5F5F5;
+$green: #56b976;
 
 $red: #EE5F5B;
 $blue: #469AE0;
 $orange: #E67E22;
-$green: #32B796;
