--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row padded">
-    <div class="col-xs-6 col-xs-offset-3">
+    <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3">
       <h1 id="login-title" class="text-center">Who are you ?</h1>
       <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
         <%= f.error_notification %>
