--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,3 +1,4 @@
+// Home cards
 .card {
   border-radius: 5px;
   box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.15);
@@ -49,4 +50,60 @@
 }
 .card-link:hover{
   opacity: 0.1;
+}
+
+// Artist cards
+.artist-card {
+  border: 1px $grey solid;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
+  margin-bottom: 20px;
+}
+
+.artist-card img {
+  margin-top: 40px;
+}
+
+.artist-card h1 {
+  font-size: 2em;
+}
+
+// Artwork cards
+.artwork-card {
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
+  padding: 10px;
+  margin: 0 10px 20px 10px;
+  border: 1px $grey solid;
+  border-radius: 5px;
+}
+
+.artwork-card img {
+  width: 233px;
+}
+
+.artwork-card .content {
+  position: relative;
+}
+
+.artwork-card .description {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  font-size: .8em;
+  text-align: justify;
+  padding: 5px;
+  background: rgba(255, 255, 255, 0.6);
+  opacity: 0;
+  margin: 0;
+  transition: opacity .3s ease;
+}
+
+.artwork-card:hover .description {
+  opacity: 1;
+}
+
+.artwork-card .details h2 {
+  font-size: 1em;
+  margin: 10px 0px 0px;
 }
