--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,11 +1,25 @@
 <!-- banner -->
 
 <div class="banner image-size" style="background-image: url('<%= image_path "office.jpg" %>');">
-  <div class="banner-content">
-    <h1>Change Your Workspace</h1>
-    <p> Exhibit artists of tomorrow in your office</p>
-      <%= link_to "Create my exhibit", exhibitions_path, class: "btn btn-primary btn-lg", id: "custom" %>
-  </div>
+  <% if user_signed_in? == false %>
+    <div class="banner-content">
+      <h1>Change Your Workspace</h1>
+      <p> Exhibit artists of tomorrow in your office</p>
+        <%= link_to "Create my exhibit", exhibitions_path, class: "btn btn-primary btn-lg", id: "custom" %>
+    </div>
+  <% elsif policy(@artwork).create? %>
+    <div class="banner-content">
+      <h1>Artist? Start exposing now!</h1>
+      <p> Join our community and get selected to exhibit your creations in the best offices</p>
+      <%= link_to "Try it out", new_bid_path, class: "btn btn-primary btn-lg" %>
+    </div>
+  <% else %>
+     <div class="banner-content">
+      <h1>Change Your Workspace</h1>
+      <p> Exhibit artists of tomorrow in your office</p>
+        <%= link_to "Create my exhibit", exhibitions_path, class: "btn btn-primary btn-lg", id: "custom" %>
+    </div>
+  <% end %>
 </div>
 
 <!-- key step-->
