--- a/app/views/exhibitions/index.html.erb
+++ b/app/views/exhibitions/index.html.erb
@@ -15,7 +15,9 @@
   </div>
   <div id="results">
     <div class="row padded">
-      <div id="map" class="col-xs-12" style="width: 100%; height: 400px;"></div>
+      <div class="col-xs-12">
+        <div id="map" style="width: 100%; height: 400px;"></div>
+      </div>
     </div>
     <div class="row">
       <% @exhibitions.each do |exhibition| %>
