--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -86,7 +86,7 @@
             <p class="name">John Doe</p>
             <p class="speciality">Photographer</p>
             <hr>
-            <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit, quod deserunt numquam fugiat. Blanditiis, modi, error. Quod vero officiis explicabo reiciendis delectus placeat vitae ea hic, a eligendi incidunt expedita.</p>
+            <p class="description"><%= truncate('Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit, quod deserunt numquam fugiat. Blanditiis, modi, error. Quod vero officiis explicabo reiciendis delectus placeat vitae ea hic, a eligendi incidunt expedita.', 90) %></p>
             <a href="" class="btn btn-primary">View profile</a>
           </div>
         </div>
