--- a/app/views/dashboard/dashboard_company.html.erb
+++ b/app/views/dashboard/dashboard_company.html.erb
@@ -9,3 +9,48 @@
   </ul>
   <% end %>
 <% end %>
+
+<!-- https://codepen.io/marceloag/pen/nzLmu -->
+
+  <div class="container">
+    <header>
+      <div class="bio">
+        <img src="http://www.croop.cl/UI/twitter/images/up.jpg" alt="background" class="bg">
+        <div class="desc">
+          <h3>@carlf</h3>
+          <p>Carl Fredricksen is the protagonist in Up. He also appeared in Dug's Special Mission as a minor character.</p>
+        </div>
+      </div>
+
+      <div class="avatarcontainer">
+        <img src="http://www.croop.cl/UI/twitter/images/carl.jpg" alt="avatar" class="avatar">
+        <div class="hover">
+            <div class="icon-twitter"></div>
+        </div>
+      </div>
+
+
+    </header>
+
+    <div class="content">
+      <div class="data">
+        <ul>
+          <li>
+            2,934
+            <span>Tweets</span>
+          </li>
+          <li>
+            1,119
+            <span>Followers</span>
+          </li>
+          <li>
+            530
+            <span>Following</span>
+          </li>
+        </ul>
+      </div>
+
+      <div class="follow"> <div class="icon-twitter"></div> Follow</div>
+    </div>
+
+  </div>
