index + show exhibition updated

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,7 @@
 
 <div class="banner image-size" style="background-image: url('<%= image_path "office.jpg" %>');">
   <div class="banner-content">
-    <h1>Change Your Workspace</h1>
+    <h1>Enlighten Your Office with Art</h1>
     <p> Exhibit artists of tomorrow in your office</p>
       <%= link_to "Create my exhibit", exhibitions_path, class: "btn btn-primary btn-lg", id: "custom" %>
   </div>
