--- a/app/views/exhibitions/show.html.erb
+++ b/app/views/exhibitions/show.html.erb
@@ -1,31 +1,76 @@
-<div class="container padded">
-  <div class="row">
-    <div class="col-xs-12 show-all">
 
-      <div class="show-picture">
-        <% @exhibition.photos.each do |photo| %>
-        <% event_url = photo || "https://unsplash.it/500/400/?random" %>
-        <%=cl_image_tag event_url.path, height: 400, width: 500, crop: :fill, id: "exhibition-picture" %>
-        <% end %>
+<div class="banner-company" style="background-image: url('<%= cl_image_path @exhibition.photos.first.path %>');"></div>
+
+<div class="wrapper exhibition">
+  <div class="container">
+    <div class="row">
+    <div class="company-title">
+      <h2><%= @exhibition.user.company_name %></h2>
       </div>
+      <div class="col-xs-12 show-all">
+      <div class="text-center">
+        <ul class="list-inline">
+            <li><i class="fa fa-facebook" aria-hidden="true"></i></li>
+            <li><i class="fa fa-twitter" aria-hidden="true"></i></li>
+            <li><i class="fa fa-linkedin" aria-hidden="true"></i></li>
+          </ul>
+          <h2><%= @exhibition.title %></h2>
+          </div>
+            <p><i class="fa fa-user" aria-hidden="true"></i><%= @exhibition.user.first_name %> <%= @exhibition.user.last_name %>
+            <p><i class="fa fa-clock-o" aria-hidden="true"></i>starting: <%= @exhibition.start_date%> - ending: <%= @exhibition.end_date%></p>
+            <p><i class="fa fa-map-marker" aria-hidden="true"></i><%= @exhibition.address %> </p>
+            <p><i class="fa fa-money" aria-hidden="true"></i><%= @exhibition.min_price %>
+          <br>
+          <h3>Event's description</h3>
+            <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi, animi saepe rem delectus nulla aut quisquam maxime voluptas dignissimos ex eveniet sint itaque cumque nostrum, harum dicta, nisi doloribus quam.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, at sed a odio ipsam quam magni ullam ipsa impedit excepturi voluptatem velit. Officia delectus animi sequi similique voluptate deserunt necessitatibus.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni dolores, unde. Ad amet itaque, quidem consequuntur dolorum obcaecati quia officia facere aliquid illo! Nesciunt sapiente, natus consequatur minus autem iure.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit voluptatibus, porro nemo a. Asperiores corporis consectetur id iusto rem velit maxime possimus architecto accusantium hic vitae, laboriosam alias recusandae dignissimos.</p>
 
-      <div class="show-description">
-        <h2><%= @exhibition.title %></h2>
-        <br>
-        <div class="icons">
-          <p><i class="fa fa-user" aria-hidden="true"></i><%= @exhibition.user.first_name %> <%= @exhibition.user.last_name %>
-          <p><i class="fa fa-clock-o" aria-hidden="true"></i> starting: <%= @exhibition.start_date%> - ending: <%= @exhibition.end_date%> </p>
-          <p><i class="fa fa-money" aria-hidden="true"></i><%= @exhibition.min_price %>
-          <p><i class="fa fa-map-marker" aria-hidden="true"></i><%= @exhibition.address %>
+
+          <h3>Office's photos:</h3>
+
+          <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+          <!-- Indicators -->
+          <ol class="carousel-indicators">
+            <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+            <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+            <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+          </ol>
+
+          <!-- Wrapper for slides -->
+          <div class="carousel-inner" role="listbox">
+            <div class="item active">
+              <img src="..." alt="...">
+              <div class="carousel-caption">
+                ...
+              </div>
+            </div>
+            <div class="item">
+              <img src="..." alt="...">
+              <div class="carousel-caption">
+                ...
+              </div>
+            </div>
+            ...
+          </div>
+
+          <!-- Controls -->
+          <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
         </div>
-          <% if policy(@exhibition).edit? %>
-            <%= link_to "Update", edit_exhibition_path(@exhibition) %>
-          <% end %>
-          <% if policy(@exhibition).destroy? %>
-            <%= link_to "Delete Mission", exhibition_path(@exhibition), method: :delete, data: {confirm: "Are you sure?"}, class: "links_show" %>
-          <% end %>
-          <%= link_to "Back to all Exhibitions", exhibitions_path, class: "links_show pull-right" %>
+
+            <% if policy(@exhibition).edit? %>
+              <%= link_to "Update", edit_exhibition_path(@exhibition) %>
+            <% end %>
+            <% if policy(@exhibition).destroy? %>
+              <%= link_to "Delete Mission", exhibition_path(@exhibition), method: :delete, data: {confirm: "Are you sure?"}, class: "links_show" %>
+            <% end %>
+            <%= link_to "Back to all Exhibitions", exhibitions_path, class: "links_show pull-right" %>
+        </div>
       </div>
     </div>
-  </div>
-</div>
+
