--- a/app/assets/stylesheets/pages/_show_exhibition.scss
+++ b/app/assets/stylesheets/pages/_show_exhibition.scss
@@ -9,8 +9,11 @@
 
 .show-all {
   background-color: white;
+  margin-top: 1px;
+
 }
 
 .company-title {
-    background-color: white;
+  background-color: white;
+  margin-top: -41px;
 }
