--- a/app/views/exhibitions/show.html.erb
+++ b/app/views/exhibitions/show.html.erb
@@ -4,7 +4,7 @@
 <div class="wrapper exhibition">
   <div class="container">
     <div class="row">
-    <div class="company-title">
+    <div class="company-title text-center">
       <h2><%= @exhibition.user.company_name %></h2>
       </div>
       <div class="col-xs-12 show-all">
