company dashboard first shot

--- a/app/assets/stylesheets/layout/_utilities.scss
+++ b/app/assets/stylesheets/layout/_utilities.scss
@@ -47,3 +47,12 @@ hr.separator {
   width: 70%;
 }
 
+// Artist category display hack
+span.artist-category {
+  background: $brand-color;
+  color: white;
+  padding: 3px 7px;
+  border-radius: 20px;
+  font-size: .8em;
+}
+
