--- a/app/views/dashboard/dashboard_company.html.erb
+++ b/app/views/dashboard/dashboard_company.html.erb
@@ -9,7 +9,7 @@
             <li role="presentation" class="active"><%= link_to "To come (#{current_user.exhibitions.count})", "#" %></li>
             <li role="presentation"><%= link_to "Current", "#" %></li>
             <li role="presentation"><%= link_to "Past", "#" %></li>
-            <li role="presentation" class="pull-right"><%= link_to "New exhibitions", "#" %></li>
+            <li role="presentation" class="pull-right"><%= link_to "New exhibitions", new_exhibition_path %></li>
           </ul>
         </div>
         <div class="list-exhibitions">
@@ -43,7 +43,7 @@
                     <div class="row">
                       <div class="col-xs-12">
                         <p class="proposals-number pull-right">
-                          <%= pluralize exhibition.bids.count, "artist candidat" %>
+                          <%= pluralize exhibition.bids.count, "artist bid" %>
                         </p>
                       </div>
                       <div class="col-xs-12">
