test autocomplete bug fix

--- a/app/views/exhibitions/_form.html.erb
+++ b/app/views/exhibitions/_form.html.erb
@@ -11,6 +11,6 @@
 <% end %>
 <%= link_to "Back to all Exhibitions", exhibitions_path, class: "links_show pull-right" %>
 
-<%= content_for(:after_js) do %>
-  <script src="https://maps.googleapis.com/maps/api/js?libraries=places&amp;key=AIzaSyDANjx3bosEtIyzJaoWs50Wnt6nt_1rmxU"></script>
-<% end %>
+<%#= content_for(:after_js) do %>
+<!--   <script src="https://maps.googleapis.com/maps/api/js?libraries=places&amp;key=AIzaSyDANjx3bosEtIyzJaoWs50Wnt6nt_1rmxU"></script> -->
+<%# end %>
