--- a/app/views/exhibitions/_form.html.erb
+++ b/app/views/exhibitions/_form.html.erb
@@ -9,7 +9,7 @@
   <%= f.input :photos, as: :attachinary %>
   <%= f.button :submit, class: "btn btn-primary" %>
 <% end %>
-<%= link_to "Back to all Exhibitions", exhibitions_path, class: "links_show pull-right" %>
+<%= link_to "Back to my dashboard", dashboard_company_users_path, class: "links_show pull-right" %>
 
 <%= content_for(:after_js) do %>
   <script src="https://maps.googleapis.com/maps/api/js?libraries=places&amp;key=AIzaSyDANjx3bosEtIyzJaoWs50Wnt6nt_1rmxU"></script>
