--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -15,8 +15,20 @@
         <div class="dropdown">
           <%= image_tag "http://placehold.it/30x30", class: "avatar dropdown-toggle", id: "navbar-wagon-menu", "data-toggle" => "dropdown" %>
           <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
+             <li>
+              <% if policy(current_user).dashboard_company? %>
+                <%= link_to dashboard_company_users_path do %>
+                  <i class="fa fa-user"></i> <%= t(".dashboard", default: "Dashboard") %>
+                <% end %>
+              <% else %>
+                <%= link_to dashboard_artist_users_path do %>
+                  <i class="fa fa-user"></i> <%= t(".dashboard", default: "Dashboard") %>
+                <% end %>
+              <% end %>
+            </li>
             <li>
-              <%= link_to user_path(current_user) do %>
+            <li>
+              <%= link_to artist_users_path(current_user) do %>
                 <i class="fa fa-user"></i> <%= t(".profile", default: "Profile") %>
               <% end %>
             </li>
