--- a/app/assets/stylesheets/layout/_utilities.scss
+++ b/app/assets/stylesheets/layout/_utilities.scss
@@ -4,6 +4,11 @@
  * Feel free to change them and create your own
  * ------------------------------------- */
 
+// Body fix
+body {
+  margin-top: 70px!important;
+}
+
 // Paddings
 .padded {
   padding-top: 3em;
