--- a/app/assets/stylesheets/pages/_index_exhibitions.scss
+++ b/app/assets/stylesheets/pages/_index_exhibitions.scss
@@ -1,12 +1,10 @@
 #map {
   width: 100%;
-  height: 200px;
+  height: calc(100vh - 70px);
 }
 
-.card.exhibition {
-  background-color: #7c7c7c;
-  color: white;
-  filter: grayscale(50%)
+#index-exhibition {
+  padding-right: 30px;
 }
 
 #discover {
