--- a/app/views/exhibitions/index.html.erb
+++ b/app/views/exhibitions/index.html.erb
@@ -1,30 +1,41 @@
-  <div id="map"></div>
-
-
-
-  <div class="container text-center">
-    <h1>Current open exhibitions</h1><br>
-    <p> Artists, discover amazing exhibitions's projects from companies all over the world and bring your art in their offices!</p>
-    <div id="results">
-      <div class="row">
-        <% @exhibitions.each do |exhibition| %>
-          <div class="col-xs-12 col-sm-6 col-md-4">
-           <% background_url = "https://unsplash.it/263/175/?random" %>
-            <div class="card exhibition" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url(<%= background_url %>);">
-              <div class="card-description title">
-                <p><%= exhibition.user.company_name %></p>
-                <h2><%= exhibition.title %></h2>
+<div class="wrapper">
+    <div class="row">
+      <div class="col-sm-12 col-md-4">
+        <div id="map"></div>
+      </div>
+      <div class="col-sm-12 col-md-8">
+        <div id="index-exhibition">
+            <div class="row">
+              <div class="col-xs-12">
+                <h1>Current open exhibitions</h1>
+                <p>Artists, discover amazing exhibitions's projects from companies all over the world and bring your art in their offices!</p>
               </div>
-              <%= link_to "Discover", exhibition_path(exhibition), class: "btn btn-primary btn-lg", id: "discover" %>
             </div>
-           <br>
-          </div>
-        <% end %>
+            <div class="row">
+              <div class="col-xs-12">
+                <div id="results">
+                  <div class="row">
+                    <% @exhibitions.each do |exhibition| %>
+                      <div class="col-xs-12 col-sm-6">
+                       <% background_url = "https://unsplash.it/263/175/?random" %>
+                        <div class="exhibition-card text-center" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url(<%= background_url %>);">
+                          <div class="card-description title">
+                            <p><%= exhibition.user.company_name %></p>
+                            <h2><%= exhibition.title %></h2>
+                          </div>
+                          <%= link_to "Discover", exhibition_path(exhibition), class: "btn btn-primary btn-lg", id: "discover" %>
+                        </div>
+                       <br>
+                      </div>
+                    <% end %>
+                  </div>
+                </div>
+              </div>
+            </div>
+        </div>
       </div>
     </div>
-  </div>
 </div>
-
 <% content_for(:after_js) do %>
   <script>
     $(document).ready(function() {
