homepage content correction

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -17,14 +17,14 @@
       <div class="col-xs-12 col-sm-6 col-md-3 text-center">
         <div class="key-step">
           <div><i class="fa fa-pencil" aria-hidden="true"></i></div>
-          <h3>Create your exhbition</h3>
+          <h3>Create your exhibition</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis, ratione, eligendi ducimus fugiat, sequi hic optio porro non excepturi aspernatur, similique autem pariatur laudantium nostrum reprehenderit ut ullam sunt ipsa.</p>
         </div>
       </div>
       <div class="col-xs-12 col-sm-6 col-md-3 text-center">
         <div class="key-step">
           <div><i class="fa fa-users" aria-hidden="true"></i></div>
-          <h3> Artists apply to your request</h3>
+          <h3> Artists apply to your exhibition</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis, ratione, eligendi ducimus fugiat, sequi hic optio porro non excepturi aspernatur, similique autem pariatur laudantium nostrum reprehenderit ut ullam sunt ipsa.</p>
         </div>
       </div>
@@ -52,7 +52,7 @@
 <div class="wrapper padded bg-grey">
   <div class="container">
     <div class="row">
-      <h2 class="padded-mini underline">Discover how le Wagon improve his workplace with us</h2>
+      <h2 class="padded-mini underline">Discover how le Wagon improved his workplace with us</h2>
       <div class="testimonial">
         <div class="col-sm-12 col-md-6">
           <div class="testimonial-content">
