--- a/app/assets/stylesheets/pages/_show_exhibition.scss
+++ b/app/assets/stylesheets/pages/_show_exhibition.scss
@@ -3,7 +3,7 @@
 }
 
 .wrapper.exhibition {
-  margin: -41px;
+  // margin: -41px;
   background-color: #ffffff;
   border-top: 1px dotted $brand-color;
 }
@@ -15,7 +15,7 @@
 
 .company-title {
   background-color: white;
-  margin: -37px auto 37px;
+  margin: -86px auto 37px;
   width: 30%;
   min-height: 60px;
   display: flex;
