--- a/app/views/exhibitions/show.html.erb
+++ b/app/views/exhibitions/show.html.erb
@@ -1,6 +1,6 @@
 <% link_image = @exhibition.photos.first.path || "banner-artist.jpeg" %>
 <div class="banner-company" style="background-image: url('<%= cl_image_path link_image %>');"></div>
-  <div class="wrapper exhibition">
+  <div class="wrapper exhibition padded">
     <div class="container">
       <div class="row">
         <div class="company-title text-center">
@@ -28,19 +28,19 @@
               <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eligendi, animi saepe rem delectus nulla aut quisquam maxime voluptas dignissimos ex eveniet sint itaque cumque nostrum, harum dicta, nisi doloribus quam.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, at sed a odio ipsam quam magni ullam ipsa impedit excepturi voluptatem velit. Officia delectus animi sequi similique voluptate deserunt necessitatibus.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni dolores, unde. Ad amet itaque, quidem consequuntur dolorum obcaecati quia officia facere aliquid illo! Nesciunt sapiente, natus consequatur minus autem iure.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit voluptatibus, porro nemo a. Asperiores corporis consectetur id iusto rem velit maxime possimus architecto accusantium hic vitae, laboriosam alias recusandae dignissimos.</p>
           </div>
 
-          <div class="carrousel-show">
+          <!-- <div class="carrousel-show">
             <h3 class="underline">Office's photos:</h3>
           </div>
-          <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+          <div id="carousel-example-generic" class="carousel slide" data-ride="carousel"> -->
             <!-- Indicators -->
-            <ol class="carousel-indicators">
+           <!--  <ol class="carousel-indicators">
               <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
               <li data-target="#carousel-example-generic" data-slide-to="1"></li>
               <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-            </ol>
+            </ol> -->
 
             <!-- Wrapper for slides -->
-            <div class="carousel-inner" role="listbox">
+            <!-- <div class="carousel-inner" role="listbox">
               <div class="item active">
                 <img src="..." alt="...">
                 <div class="carousel-caption">
@@ -54,10 +54,10 @@
                 </div>
               </div>
               ...
-            </div>
+            </div> -->
 
             <!-- Controls -->
-            <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+<!--             <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
               <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
               <span class="sr-only">Previous</span>
             </a>
@@ -65,7 +65,7 @@
               <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
               <span class="sr-only">Next</span>
             </a>
-          </div>
+          </div> -->
 
           <div class="user-paths text-center">
               <%# if policy(@exhibition).edit? %>
